--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.7.9",
-    "gulp": "^3.9.0"
+    "commander": "^2.8.1",
+    "gulp": "^3.9.0",
+    "gulp-jade": "^1.0.1"
   }
 }
