--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.7.9",
     "commander": "^2.8.1",
     "gulp": "^3.9.0",
+    "gulp-ignore": "^1.2.1",
     "gulp-jade": "^1.0.1"
   }
 }
