--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "browser-sync": "^2.7.9",
     "commander": "^2.8.1",
     "gulp": "^3.9.0",
+    "gulp-buffer": "0.0.2",
     "gulp-ignore": "^1.2.1",
+    "gulp-include": "^1.1.1",
+    "gulp-inject": "^1.3.1",
     "gulp-jade": "^1.0.1"
   }
 }
