--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.0",
     "gulp-buffer": "0.0.2",
     "gulp-ignore": "^1.2.1",
+    "gulp-imagemin": "^2.3.0",
     "gulp-include": "^1.1.1",
     "gulp-inject": "^1.3.1",
     "gulp-jade": "^1.0.1"
