--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-imagemin": "^2.3.0",
     "gulp-include": "^1.1.1",
     "gulp-inject": "^1.3.1",
-    "gulp-jade": "^1.0.1"
+    "gulp-jade": "^1.0.1",
+    "gulp-replace": "^0.5.3"
   }
 }
